tests/diagnostic_golden/free_parse_continuation.f90
program p
integer :: a, &
  )
end
